--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/blow"]
 	path = themes/blow
 	url = git@github.com:tchartron/blow.git
+[submodule "themes/hermit_zola"]
+	path = themes/hermit_zola
+	url = git@github.com:VersBinarii/hermit_zola
