--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -17,6 +17,8 @@ jobs:
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
+          BUILD_DIR: themes/blow/
+          OUT_DIR: /root
           # Provide personal access token
           # TOKEN: ${{ secrets.TOKEN }}
           # Or if publishing to the same repo, use the automatic token
