--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -18,7 +18,7 @@ jobs:
           # Target branch
           PAGES_BRANCH: gh-pages
           BUILD_DIR: themes/blow/
-          OUT_DIR: /root
+          OUT_DIR: /docs
           # Provide personal access token
           # TOKEN: ${{ secrets.TOKEN }}
           # Or if publishing to the same repo, use the automatic token
