--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -19,8 +19,7 @@ jobs:
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
-          BUILD_DIR: themes/blow/
-          OUT_DIR: ../../docs
+          OUT_DIR: docs
           # Provide personal access token
           # TOKEN: ${{ secrets.TOKEN }}
           # Or if publishing to the same repo, use the automatic token
