--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -19,6 +19,7 @@ jobs:
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
+          BUILD_DIR: .
           OUT_DIR: docs
           # Provide personal access token
           # TOKEN: ${{ secrets.TOKEN }}
