--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,8 @@ compile_sass = false
 
 theme = "blow"
 
+output_dir = "docs"
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
@@ -14,9 +16,16 @@ build_search_index = true
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+highlight_theme = "css"
+
+highlight_themes_css = [
+  { theme = "ayu-dark", filename = "syntax-dark.css" },
+  { theme = "ayu-light", filename = "syntax-light.css" },
+]
+
 [extra]
 enable_search = true
-enable_sidebar = true
+enable_sidebar = false # sidebar has tags and can be enabled later
 enable_adsense = true
 enable_multilingue = true
 adsense_link = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=myclientid"
@@ -25,8 +34,7 @@ adsense_link = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?c
 [extra.sidebar]
 items = [
     { lang = "en", links = [
-        { url = "/markdown", name = "Markdown" },
-        { url = "/blog", name = "Blog" },
+        { url = "/tags", name = "Tags" },
     ] }
 ]
 
@@ -35,27 +43,31 @@ items = [
 items = [
     { lang = "en", links = [
         { url = "/", name = "Home" },
-        { url = "/categories", name = "Categories" },
-        { url = "/tags", name = "Tags" },
+        { url = "/blog", name = "Blog" },
+        { url = "/archive", name = "Archive" },
     ] },
 ]
-title = "title"
+title = "Sudharma's space"
 
 
 [extra.index]
 title = "Sudharma Puranik"
-image = "https://via.placeholder.com/200"
-image_alt = "Placeholder text describing the index's image."
+image = "https://avatars.githubusercontent.com/u/854034?v=4"
+image_alt = ""
 
 [extra.default_author]
 name = "Sudharma Puranik"
-avatar = "https://via.placeholder.com/200"
+# avatar = "https://via.placeholder.com/200"
 avatar_alt = "Sudharma Puranik"
 
 
 [extra.social]
+codeberg = ""
+gitlab = ""
+mastodon = ""
+telegram = ""
 github = "https://github.com/sudharma"
 twitter = "https://twitter.com/chaosguru"
 linkedin = "https://www.linkedin.com/in/sudharmapuranik/"
 stackoverflow = "https://stackoverflow.com/users/902396/chaosguru" 
-email = "sudharma.puranik@gmail.com"
+email = "sudharma.puranik@fastmail.com"
