--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,16 @@
 # The URL the site will be built for
 base_url = "https://sudharma.github.io"
 
-name = ""
 
-description = ""
-
-# Whether to automatically compile all Sass files in the sass directory
-compile_sass = false
-
-theme = "blow"
-
+theme = "serene"
 output_dir = "docs"
+compile_sass = true
+minify_html = true
+build_search_index = false            # Keep this false, search is temporarily unsupported
+generate_feed = false                 # Whether to generate a feed file in root, read docs for more info about rss feed
+feed_filename = "feed.xml"             # The file name of feed, "feed.xml" / "atom.xml" / "rss.xml", read docs for more info
+taxonomies = [{ name = "tags" }, { name = "categories" }]
 
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
 
 [markdown]
 # Whether to do syntax highlighting
@@ -28,50 +25,49 @@ highlight_themes_css = [
 ]
 
 [extra]
-enable_search = false
-enable_sidebar = false # sidebar has tags and can be enabled later
-enable_adsense = true
-enable_multilingue = false
-adsense_link = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=myclientid"
 
-
-[extra.sidebar]
-items = [
-    { lang = "en", links = [
-        { url = "/tags", name = "Tags" },
-    ] }
+avatar = "img/lego-batman-3.webp"            # Your avatar
+name = "Sudharma"                         # Your name
+id = "chaosguru"                           # Your id / username / handle
+bio = "Software Engineer"                          # Your bio
+links = [                             # Your links
+    { name = "GitHub", icon = "github", url = "https://github.com/sudharma" },
+    { name = "Twitter", icon = "twitter", url = "https://twitter.com/chaosguru" },
+    { name = "Email", icon = "email", url = "mailto:sudharma@fastmail.com" },
 ]
+homepage_layout = "about" 
+blog_section_path = "/blog"
 
 
-[extra.navbar]
-items = [
-    { lang = "en", links = [
-        { url = "/", name = "Home" },
-        { url = "/blog", name = "Blog" },
-        { url = "/about", name = "About" },
-    ] },
+sections = [
+    { name = "blog", path = "/blog", is_external = false },
+    { name = "TIL", path = "/til", is_external = false },
+    # { name = "about", path = "/about", is_external = false },
 ]
-title = ""
+nav_separator = "::"
+nav_wrapper_left = "{"
+nav_wrapper_right = "} ;"
+nav_wrapper_separator = ","
 
+display_id = true                     # Whether to display your id on homepage
+blog_categorized = true               # Whether to categorize blog posts
+blur_effect = true                    # Whether to turn on blur effect on navigation bar
+back_to_top = true                    # Whether to show back-to-top button on post pages
 
-[extra.index]
-title = ""
-image = "https://avatars.githubusercontent.com/u/854034?v=4"
-image_alt = ""
+toc = true                            # Whether to show Table-Of-Contents by default
+copy = true                           # Whether to add a copy button on code blocks by default
+comment = false                       # Whether to show giscus comment section by default, see https://giscus.app for more info
+display_tags = true                   # Whether to display tags on post pages by default
+truncate_summary = false              # Whether to truncate the summary of a post by default
 
-[extra.default_author]
-name = "Sudharma Puranik"
-# avatar = "https://via.placeholder.com/200"
-avatar_alt = "Sudharma Puranik"
+outdate_alert = false                 # Whether to show outdate alert by default
+outdate_alert_days = 120              # How many days will a post be outdated by default
+outdate_alert_text_before = "This article was last updated "
+outdate_alert_text_after = " days ago and may be out of date."
 
+footer_copyright = "© 2023 Sudharma"
+footer_credits = false                 # Whether to show "powered by zola and serene" in footer
 
-[extra.social]
-codeberg = ""
-gitlab = ""
-mastodon = ""
-telegram = ""
-github = "https://github.com/sudharma"
-twitter = "https://twitter.com/chaosguru"
-linkedin = "https://www.linkedin.com/in/sudharmapuranik/"
-stackoverflow = "https://stackoverflow.com/users/902396/chaosguru" 
-email = "sudharma.puranik@fastmail.com"
+not_found_title = "404"
+not_found_error_text = "Not Found"
+not_found_recover_text = "« back to home »"
