--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -1,9 +1,9 @@
 # On every push this script is executed
 on: 
   workflow_dispatch:
-  push:
-    branches:
-    - main
+  # push:
+  #   branches:
+  #   - main
 name: Build and deploy GH Pages
 jobs:
   build:
